objects/CSS_UserLocation__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CSS_UserLocations</relationshipLabel>
        <relationshipName>CSS_UserLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMSApplicationURL__c</fullName>
        <formula>AccountId__r.BMSApplicationURL__c</formula>
        <label>BMSApplicationURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMS_Enabled__c</fullName>
        <formula>AccountId__r.BMS_Enabled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMS Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Claim__c</fullName>
        <formula>AccountId__r.Enable_Claims__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enable Claim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_FSL__c</fullName>
        <formula>AccountId__r.Enable_FSL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enable FSL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FedId__c</fullName>
        <label>FedId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>AccountId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Source__c</fullName>
        <description>This field is used for location source based on LDAP or ARF</description>
        <label>Location_Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LDAP</fullName>
                    <default>true</default>
                    <label>LDAP</label>
                </value>
                <value>
                    <fullName>ARF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_code__c</fullName>
        <externalId>true</externalId>
        <label>Location_code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UserId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSS_UserLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserLocationKey__c</fullName>
        <externalId>true</externalId>
        <label>UserLocationKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isClaims__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is for accessing claims based on location from LDAP</description>
        <label>isClaims</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPrimary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isServiceJobs__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is for accessing jobs based on location from LDAP</description>
        <label>isServiceJobs</label>
        <type>Checkbox</type>
    </fields>
    <label>CSS_UserLocation</label>
    <listViews>
        <fullName>All_User_Locations</fullName>
        <columns>NAME</columns>
        <columns>FedId__c</columns>
        <columns>isActive__c</columns>
        <columns>UserId__c</columns>
        <columns>UserLocationKey__c</columns>
        <columns>Location_Name__c</columns>
        <columns>Location_code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location_code__c</field>
            <operation>contains</operation>
            <value>50070</value>
        </filters>
        <label>All User Locations</label>
    </listViews>
    <listViews>
        <fullName>InActiveUserLocation</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>AccountId__c</columns>
        <columns>BMSApplicationURL__c</columns>
        <columns>BMS_Enabled__c</columns>
        <columns>isActive__c</columns>
        <columns>isPrimary__c</columns>
        <columns>Location_code__c</columns>
        <columns>Location_Name__c</columns>
        <columns>UserId__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Location_code__c</field>
            <operation>contains</operation>
            <value>79460</value>
        </filters>
        <filters>
            <field>UserId__c</field>
            <operation>equals</operation>
            <value>Sarah Stoltenow</value>
        </filters>
        <label>InActiveUserLocation</label>
    </listViews>
    <nameField>
        <label>CSS_UserLocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS_UserLocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>